--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Rajveer Singh Panwar</h1>
-        <img src="./WhatsApp Image 2023-04-26 at 12.12.24.jpg"/>
+        <img src="./image.jpg"/>
         <h2>Summary</h2>
         <p>I am a hardworking and dedicated individual with experience in team leading and public speaking</p>
         <hr/>
